<resources>
    <string name="app_name">Inventory_v2</string>

    <string name="editor_activity_title_new_product">Add new product</string>

    <string name="editor_activity_title_edit_Pet">Edit Product informationt</string>

    <string name="empty_view_title_text">Please add new inventory information of product via push below-right float button</string>


    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving pet</string>

    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating pet</string>

    <string name="editor_delete_product_sucessful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting pet</string>

    <string name="unknown_supplier">Unknown</string>

    <!-- Dialog message -->
    <string name="unsaved_changed_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="Keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product information?</string>
    <string name="delete_All_dialog_msg">Delete all product information?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Editor catalog -->
    <string name="editor_catalog_product_name">Product Name</string>
    <string name="editor_catalog_supplier">Supplier</string>
    <string name="editor_catalog_quantity">Quantity</string>
    <string name="editor_catalog_price">Price</string>
    <string name="editor_catalog_picture">Add Picture</string>

    <!-- Editor Label measurement -->
    <string name="editor_quantity_unit">Unit</string>
    <string name="editor_price_currency">Euro/Unit</string>

    <!-- menu -->
    <string name="editor_action_save">Save</string>
    <string name="editor_action_delete">Delete</string>
    <string name="main_action_delete_all_information">Delete all information</string>
    <string name="main_action_insert_dummy_data">Insert Dummy Data</string>
</resources>
